# vm-timing-report

./: Makefile.am  README  README.CentOS.md  README.md  configure.ac
data/: centos7.ks  vm-report.init  vm-report.service
scripts/: gen-ubuntu-rawfs.sh  spin-from-raw.sh  vm-report.sh
src/: vm-timing-report.c
